chore: jenkins and jenkins-agent

--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 COMPOSE_PROJECT_NAME=devsecops_pipeline_jenkins
 COMPOSE_PROFILES=cicdtool
 
+JENKINS_DOCKER_IMAGE=docker:dind
+JENKINS_DOCKER_CONTAINER_NAME=docker
+JENKINS_DOCKER_PORT=2376
+
+JENKINS_DOCKERFILE=DockerfileJenkins
 JENKINS_CONTAINER_NAME=jenkins
-JENKINS_IMAGE=jenkins/jenkins:lts-jdk17
-JENKINS_PORT=2376
+JENKINS_IMAGE=my-jenkins:v0.1
+JENKINS_PORT=8080
 JENKINS_AGENT_PORT=50000
