--- a/.env
+++ b/.env
@@ -10,3 +10,18 @@ JENKINS_CONTAINER_NAME=jenkins
 JENKINS_IMAGE=my-jenkins:v0.1
 JENKINS_PORT=8080
 JENKINS_AGENT_PORT=50000
+
+DOCKER_TOOLS_CONTAINER_NAME=docker-tools
+DOCKER_TOOLS_CONTAINER_IMAGE=rmkanda/docker-tools:latest
+
+KANIKO_CONTAINER_NAME=kaniko
+KANIKO_CONTAINER_IMAGE=gcr.io/kaniko-project/executor:latest
+
+DTRACK_API_CONTAINER_NAME=dtract-api
+DTRACK_API_IMAGE=dependencytrack/apiserver
+DTRACK_API_SERVER=localhost
+DTRACK_API_EXPOSE_PORT=8081
+
+DTRACK_FRONTEND_CONTAINER_NAME=dtrack-frontend
+DTRACK_FRONTEND_IMAGE=dependencytrack/frontend
+DTRACK_FRONTEND_EXPOSE_PORT=8082
