--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -30,7 +30,18 @@
     :versions: []
     :when: 2020-05-31 15:27:21.894141000 Z
 - - :permit
+  - Eclipse Public License 1.0, GNU Lesser General Public License
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2024-11-14 15:23:29.688403000 Z
+- - :permit
   - Eclipse Public License v2.0
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2020-05-31 15:27:29.688403000 Z
+  - Eclipse 2.0, GPL2 w/ CPE
   - :who: 
     :why: 
     :versions: []
