fix: license check config type

--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -41,6 +41,7 @@
     :why: 
     :versions: []
     :when: 2020-05-31 15:27:29.688403000 Z
+- - :permit
   - Eclipse 2.0, GPL2 w/ CPE
   - :who: 
     :why: 
