--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -46,27 +46,33 @@
   - :who: 
     :why: 
     :versions: []
-    :when: 2020-05-31 15:27:29.688403000 Z
+    :when: 2024-11-14 15:27:29.688403000 Z
+- - :permit
+  - Eclipse Distribution License - v 1.0
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2024-11-14 15:27:29.688403000 Z
 - - :approve
   - logback-core
   - :who: 
     :why: 
     :versions:
-    - 1.2.7
+    - 1.5.11
     :when: 2020-05-31 15:28:30.302764000 Z
 - - :approve
   - logback-classic
   - :who: 
     :why: 
     :versions:
-    - 1.2.7
+    - 1.5.11
     :when: 2020-05-31 15:29:03.621478000 Z
 - - :approve
   - jakarta.xml.bind-api
   - :who: 
     :why: 
     :versions:
-    - 2.3.3
+    - 4.0.2
     :when: 2020-05-31 15:29:19.300525000 Z
 - - :approve
   - jakarta.el
@@ -80,5 +86,5 @@
   - :who: 
     :why: 
     :versions:
-    - 1.3.5
+    - 2.1.1
     :when: 2020-05-31 15:29:53.045616000 Z
