--- a/pod.yaml
+++ b/pod.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: app
-      image: sample-app:latest
+      image: docker.io/rhythmsyu/dso-demo:latest
       resources:
         requests:
           memory: "64Mi"
