--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -46,9 +46,7 @@ spec:
     - name: argocd-cli
       image: bitnami/argo-cd:2.13.1
       command:
-        - sleep
-      args:
-        - 99d
+        - cat
       tty: true
   volumes:
     - name: m2
