feat: always pull image in dev/pod.yaml

--- a/manifest/dev/pod.yaml
+++ b/manifest/dev/pod.yaml
@@ -8,6 +8,7 @@ spec:
   containers:
     - name: app
       image: docker.io/rhythmsyu/dso-demo
+      imagePullPolicy: Always
       resources:
         requests:
           memory: "64Mi"
