feat: add securityContext for git container in build-agent.yaml

--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -56,6 +56,9 @@ spec:
       tty: true
     - name: git
       image: alpine/git:v2.45.2
+      securityContext:
+        runAsUser: 1000  # Jenkins 用戶 UID
+        runAsGroup: 1000 # Jenkins 用戶 GID
       command:
         - sleep
       args:
