--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
+			<version>3.4.13</version>
 		</dependency>
 
 		<dependency>
