feat: slscan add volumeMounts in build-agent.yaml

--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -71,6 +71,9 @@ spec:
       command:
         - cat
       tty: true
+      volumeMounts:
+        - name: m2
+          mountPath: /root/.m2/
     - name: zap
       image: ghcr.io/zaproxy/zaproxy:stable
       command: 
