--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -35,6 +35,9 @@ spec:
       tty: true
     - name: kaniko
       image: gcr.io/kaniko-project/executor:v1.23.2-debug
+      securityContext:
+        capabilities:
+          add: ["CHOWN", "SETFCAP","SETGID","SETUID"]
       command:
         - sleep
       args:
