feat: always pull kaniko image in build-agent.yaml

--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -35,6 +35,7 @@ spec:
       tty: true
     - name: kaniko
       image: gcr.io/kaniko-project/executor:v1.23.2-debug
+      imagePullPolicy: Always
       command:
         - sleep
       args:
