feat: add always pull image for docker-tools in build-agent.yaml

--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -15,6 +15,7 @@ spec:
           mountPath: /root/.m2/
     - name: docker-tools
       image: rmkanda/docker-tools:latest
+      imagePullPolicy: Always
       command:
         - cat
       tty: true
